# blobchat

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
src/blobchat/: __init__.py  cleaner.py  cli.py  setup.py  slang_dict.py
tests/: test_blobchat.py
